--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
   "name": "koa-opentracing",
   "main": "src/index.js",
+  "version": "1.0.0",
+  "repository": "",
+  "author": "cnwangjie",
+  "license": "MIT",
+  "scripts": {
+    "lint": "standard",
+    "test": "mocha test --exit",
+    "coverage": "nyc -x src/logger --reporter=text yarn test"
+  },
   "dependencies": {
     "address": "^1.0.3",
     "opentracing": "^0.14.3",
@@ -8,6 +17,17 @@
     "zipkin-transport-http": "^0.14.0"
   },
   "devDependencies": {
-    "koa": "^2.5.2"
+    "chai": "^4.1.2",
+    "istanbul": "^0.4.5",
+    "koa": "^2.5.2",
+    "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
+    "standard": "^11.0.1",
+    "supertest": "^3.1.0"
+  },
+  "standard": {
+    "ignore": [
+      "test"
+    ]
   }
 }
