--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-opentracing",
   "main": "dist/index.js",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "repository": "https://github.com/teambition/koa-opentracing.git",
   "author": "cnwangjie",
   "license": "MIT",
@@ -10,7 +10,7 @@
     "test": "mocha test --exit",
     "coverage": "nyc -x src/logger --reporter=text yarn test",
     "build": "babel src -d dist",
-    "prepublish": "yarn build"
+    "prepublishOnly": "yarn build"
   },
   "dependencies": {
     "address": "^1.0.3",
